--- a/JudoScoreBoard/Components/App.razor
+++ b/JudoScoreBoard/Components/App.razor
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-    <Routes @rendermode=RenderMode.InteractiveServer/>
+<Routes @rendermode=RenderMode.InteractiveServer></Routes>
     <script src="_framework/blazor.web.js"></script>
+    <script src="Scripts/sound.js"></script>
 </body>
 
 </html>
